# AOC_2022

./: .gitignore  .pre-commit-config.yaml  README.md  boilerplate_generator.py  generate_solutions.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: python-package.yml
scripts/: boilerplate_generator.py
scripts/boilerplate/: __main__.py  part_1.py
src/aoc_2022/: utils.py
src/aoc_2022/day_01/: part_1.py  part_2.py
src/aoc_2022/day_02/: part_2.py
src/aoc_2022/day_03/: part_1.py
src/aoc_2022/day_05/: part_1.py  part_2.py
src/aoc_2022/day_06/: part_1.py  part_2.py
src/aoc_2022/day_07/: part_1.py  part_2.py
src/aoc_2022/day_08/: part_1.py  part_2.py
tests/day_01/: test_part_1.py  test_part_2.py
tests/day_02/: test_part_1.py  test_part_2.py
tests/day_03/: test_part_1.py  test_part_2.py
tests/day_04/: test_part_1.py  test_part_2.py
tests/day_05/: test_part_1.py  test_part_2.py
tests/day_06/: test_part_1.py  test_part_2.py
tests/day_07/: test_part_1.py  test_part_2.py
tests/day_08/: test_part_1.py  test_part_2.py
tests/day_09/: test_part_1.py  test_part_2.py
tests/day_1/: test_part_1.py  test_part_2.py
tests/day_10/: test_part_1.py  test_part_2.py
tests/day_2/: test_part_1.py  test_part_2.py
tests/day_3/: test_part_1.py  test_part_2.py
tests/day_4/: test_part_1.py  test_part_2.py
tests/day_5/: test_part_1.py  test_part_2.py
tests/day_6/: test_part_1.py  test_part_2.py
tests/day_7/: test_part_1.py  test_part_2.py
tests/day_8/: test_part_1.py  test_part_2.py
tests/day_9/: test_part_1.py  test_part_2.py
(+22 files in other folders)
